--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
 </head>
   <body>
     
-   <embed src="post1.txt"> 
+   <embed src="Blog Posts/post1.txt"> 
   
   
   </body>
