--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
 <nav class="w3-sidebar w3-bar-block w3-card w3-top w3-xlarge w3-animate-left" style="display:none;z-index:2;width:40%;min-width:300px" id="mySidebar">
   <a href="javascript:void(0)" onclick="w3_close()"
   class="w3-bar-item w3-button">Close Menu</a>
-  <a href="#home" onclick="w3_close()" class="w3-bar-item w3-button">Home</a>
-  <a href="#track" onclick="w3_close()" class="w3-bar-item w3-button">Where are we?</a>
-  <a href="blog.txt" onclick="w3_close()" class="w3-bar-item w3-button">Blog</a>
-  <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">About us</a>
+  <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button">Home</a>
+  <a href="where.htmp" onclick="w3_close()" class="w3-bar-item w3-button">Where are we?</a>
+  <a href="blog.html" onclick="w3_close()" class="w3-bar-item w3-button">Blog</a>
+  <a href="about.html" onclick="w3_close()" class="w3-bar-item w3-button">About us</a>
 </nav>
 
 <!-- Top menu -->
@@ -59,31 +59,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
     </div>
   </div>
   
- <!-- 
-  <!-- Second Photo Grid-->
-  <div class="w3-row-padding w3-padding-16 w3-center">
-    <div class="w3-quarter">
-      <img src="/w3images/popsicle.jpg" alt="Popsicle" style="width:100%">
-      <h3>All I Need Is a Popsicle</h3>
-      <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-    </div>
-    <div class="w3-quarter">
-      <img src="/w3images/salmon.jpg" alt="Salmon" style="width:100%">
-      <h3>Salmon For Your Skin</h3>
-      <p>Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-    </div>
-    <div class="w3-quarter">
-      <img src="/w3images/sandwich.jpg" alt="Sandwich" style="width:100%">
-      <h3>The Perfect Sandwich, A Real Classic</h3>
-      <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-    </div>
-    <div class="w3-quarter">
-      <img src="/w3images/croissant.jpg" alt="Croissant" style="width:100%">
-      <h3>Le French</h3>
-      <p>Lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-    </div>
-  </div>
-  -->
+
 
   <!-- Pagination -->
   <div class="w3-center w3-padding-32">
