fixed sidebar links

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
   <a href="javascript:void(0)" onclick="w3_close()"
   class="w3-bar-item w3-button">Close Menu</a>
   <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button">Home</a>
-  <a href="where.htmp" onclick="w3_close()" class="w3-bar-item w3-button">Where are we?</a>
+  <a href="where.html" onclick="w3_close()" class="w3-bar-item w3-button">Where are we?</a>
   <a href="blog.html" onclick="w3_close()" class="w3-bar-item w3-button">Blog</a>
   <a href="about.html" onclick="w3_close()" class="w3-bar-item w3-button">About us</a>
 </nav>
