--- a/blog.html
+++ b/blog.html
@@ -17,10 +17,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
 <nav class="w3-sidebar w3-bar-block w3-card w3-top w3-xlarge w3-animate-left" style="display:none;z-index:2;width:40%;min-width:300px" id="mySidebar">
   <a href="javascript:void(0)" onclick="w3_close()"
   class="w3-bar-item w3-button">Close Menu</a>
-  <a href="#home" onclick="w3_close()" class="w3-bar-item w3-button">Home</a>
-  <a href="#track" onclick="w3_close()" class="w3-bar-item w3-button">Where are we?</a>
-  <a href="blog.txt" onclick="w3_close()" class="w3-bar-item w3-button">Blog</a>
-  <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">About us</a>
+  <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button">Home</a>
+  <a href="where.html" onclick="w3_close()" class="w3-bar-item w3-button">Where are we?</a>
+  <a href="blog.html" onclick="w3_close()" class="w3-bar-item w3-button">Blog</a>
+  <a href="about.html" onclick="w3_close()" class="w3-bar-item w3-button">About us</a>
 </nav>
 
 <!-- Top menu -->
